--- a/config/database.yml
+++ b/config/database.yml
@@ -3,23 +3,27 @@
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem "sqlite3"
-#
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
+  encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  username: <%= ENV['DATABASE_USERNAME'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  host: localhost
+  port: 5432
+
 
 development:
   <<: *default
-  database: storage/development.sqlite3
+  database: wealth_blog
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: storage/test.sqlite3
+#test:
+#  <<: *default
+#  database: <%#= ENV['DATABASE_NAME'] %>
 
-production:
-  <<: *default
-  database: storage/production.sqlite3
+#production:
+#  <<: *default
+#  database: <%#= ENV['DATABASE_NAME'] %>
